Fix alignment issue

--- a/css/style.css
+++ b/css/style.css
@@ -146,9 +146,10 @@ h4.sub {
 }
 
 .logs > ul > li > .message {
-  width: 470px;
+  max-width: 537px;
   text-align: left;
-  float: right;
+  margin-left: 1em;
+  float: left;
 }
 
 button.toggle {
